@@ -5995,18 +5995,7 @@ name|hri
 argument_list|)
 expr_stmt|;
 block|}
-synchronized|synchronized
-init|(
-name|this
-operator|.
-name|regionPlans
-init|)
-block|{
-name|this
-operator|.
-name|regionPlans
-operator|.
-name|remove
+name|clearRegionPlan
 argument_list|(
 name|hri
 operator|.
@@ -6014,7 +6003,6 @@ name|getEncodedName
 argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
 synchronized|synchronized
 init|(
 name|this
@@ -6082,6 +6070,33 @@ break|break;
 block|}
 block|}
 block|}
+block|}
+block|}
+comment|/**    * @param encodedRegionName Region whose plan we are to clear.    */
+name|void
+name|clearRegionPlan
+parameter_list|(
+specifier|final
+name|String
+name|encodedRegionName
+parameter_list|)
+block|{
+synchronized|synchronized
+init|(
+name|this
+operator|.
+name|regionPlans
+init|)
+block|{
+name|this
+operator|.
+name|regionPlans
+operator|.
+name|remove
+argument_list|(
+name|encodedRegionName
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 comment|/**    * Wait on region to clear regions-in-transition.    * @param hri Region to wait on.    * @throws IOException    */
