@@ -3645,9 +3645,68 @@ name|encodedRegionName
 argument_list|)
 argument_list|)
 throw|;
+name|HRegionInfo
+name|hri
+init|=
+name|p
+operator|.
+name|getFirst
+argument_list|()
+decl_stmt|;
 name|HServerInfo
 name|dest
 init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|destServerName
+operator|==
+literal|null
+operator|||
+name|destServerName
+operator|.
+name|length
+operator|==
+literal|0
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Passed destination servername is null/empty so "
+operator|+
+literal|"choosing a server at random"
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|assignmentManager
+operator|.
+name|clearRegionPlan
+argument_list|(
+name|hri
+operator|.
+name|getEncodedName
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Unassign will reassign it elsewhere choosing random server.
+name|this
+operator|.
+name|assignmentManager
+operator|.
+name|unassign
+argument_list|(
+name|hri
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|dest
+operator|=
 name|this
 operator|.
 name|serverManager
@@ -3660,7 +3719,7 @@ argument_list|(
 name|destServerName
 argument_list|)
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|RegionPlan
 name|rp
 init|=
@@ -3689,6 +3748,7 @@ argument_list|(
 name|rp
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 end_function
 
@@ -5051,6 +5111,73 @@ block|}
 end_function
 
 begin_function
+annotation|@
+name|Override
+specifier|public
+name|void
+name|assign
+parameter_list|(
+specifier|final
+name|byte
+index|[]
+name|regionName
+parameter_list|,
+specifier|final
+name|boolean
+name|force
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Pair
+argument_list|<
+name|HRegionInfo
+argument_list|,
+name|HServerAddress
+argument_list|>
+name|pair
+init|=
+name|MetaReader
+operator|.
+name|getRegion
+argument_list|(
+name|this
+operator|.
+name|catalogTracker
+argument_list|,
+name|regionName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|pair
+operator|==
+literal|null
+condition|)
+throw|throw
+operator|new
+name|UnknownRegionException
+argument_list|(
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|regionName
+argument_list|)
+argument_list|)
+throw|;
+name|assignRegion
+argument_list|(
+name|pair
+operator|.
+name|getFirst
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+end_function
+
+begin_function
 specifier|public
 name|void
 name|assignRegion
@@ -5066,6 +5193,97 @@ argument_list|(
 name|hri
 argument_list|,
 literal|true
+argument_list|)
+expr_stmt|;
+block|}
+end_function
+
+begin_function
+annotation|@
+name|Override
+specifier|public
+name|void
+name|unassign
+parameter_list|(
+specifier|final
+name|byte
+index|[]
+name|regionName
+parameter_list|,
+specifier|final
+name|boolean
+name|force
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Pair
+argument_list|<
+name|HRegionInfo
+argument_list|,
+name|HServerAddress
+argument_list|>
+name|pair
+init|=
+name|MetaReader
+operator|.
+name|getRegion
+argument_list|(
+name|this
+operator|.
+name|catalogTracker
+argument_list|,
+name|regionName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|pair
+operator|==
+literal|null
+condition|)
+throw|throw
+operator|new
+name|UnknownRegionException
+argument_list|(
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|regionName
+argument_list|)
+argument_list|)
+throw|;
+name|HRegionInfo
+name|hri
+init|=
+name|pair
+operator|.
+name|getFirst
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|force
+condition|)
+name|this
+operator|.
+name|assignmentManager
+operator|.
+name|clearRegionFromTransition
+argument_list|(
+name|hri
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|assignmentManager
+operator|.
+name|unassign
+argument_list|(
+name|hri
+argument_list|,
+name|force
 argument_list|)
 expr_stmt|;
 block|}
